cabal-version:      2.4
name:               md-parser
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             staplesad
maintainer:         sadhbhsdoyle@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    hs-source-dirs: lib
    exposed-modules: Md.Parser
    build-depends:    pretty-simple, megaparsec, base ^>=4.14.3.0
    default-language: Haskell2010

executable md-parser-exe
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    directory, md-parser, megaparsec, pretty-simple, base ^>=4.14.3.0
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is:    Test.hs
    build-depends: md-parser, megaparsec, tasty, tasty-hunit, base
    default-language: Haskell2010
